コンピュータ対戦モードの導入 - コンピュータの実装 - コンピュータ対戦のゲームモード実装 - ユニットテストの作成 - JUnit5の導入 - GitHubActionsの設定 - バージョンコードをプロパティファイルとコマンドライン引数から設定